--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   }
 }
