--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
+    "styled-components": "^5.2.1",
     "styled-content-loader": "^1.2.2",
     "web-vitals": "^1.0.1"
   },
@@ -41,7 +42,6 @@
   },
   "devDependencies": {
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "redux": "^4.0.5"
   }
 }
